# RawHandler

./: .gitignore  README.md  pyproject.toml  testing_denoise_rawpy.ipynb
.github/: cy.yml
.github/workflows/: cy.yml
examples/: dataset_for_noisy_images.ipynb  simple_demosaicing.ipynb  simple_demosaicing_RawHandlerRawpy.ipynb
src/: RawHandler.py
src/RawHandler/: MetaDataHandler.py  RawDataset.py  RawHandler.py  RawHandlerRawpy.py  dng_utils.py  utils.py
tests/: test_load_and_demosaic.py
